k8s/07-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ticketing
spec:
  replicas: 2
  selector: { matchLabels: { app: worker } }
  template:
    metadata:
      labels: { app: worker }
    spec:
      serviceAccountName: ticketing-sa
      automountServiceAccountToken: false
      containers:
        - name: worker
          # ZAMIJENI <GHCR_USER> svojim GitHub korisnikom
          image: ticketing-worker:v1.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec: { command: ["sh","-c","pgrep -f worker.js"] }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "96Mi" }
            limits:   { cpu: "300m", memory: "192Mi" }
