k8s/05-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ticketing
spec:
  replicas: 1
  selector: { matchLabels: { app: postgres } }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      serviceAccountName: ticketing-sa
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports: [{ containerPort: 5432 }]
          volumeMounts:
            - { name: data, mountPath: /var/lib/postgresql/data }
            - { name: init, mountPath: /docker-entrypoint-initdb.d }
          readinessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"] }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"] }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "300m", memory: "256Mi" }
      volumes:
        - { name: data, persistentVolumeClaim: { claimName: postgres-pvc } }
        - { name: init, configMap: { name: postgres-init } }
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ticketing
spec:
  selector: { app: postgres }
  ports: [{ port: 5432, targetPort: 5432 }]
