k8s/06-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ticketing
spec:
  replicas: 1
  selector: { matchLabels: { app: redis } }
  template:
    metadata:
      labels: { app: redis }
    spec:
      serviceAccountName: ticketing-sa
      automountServiceAccountToken: false
      containers:
        - name: redis
          image: redis:7-alpine
          ports: [{ containerPort: 6379 }]
          readinessProbe:
            exec: { command: ["redis-cli","ping"] }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec: { command: ["redis-cli","ping"] }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "96Mi" }
            limits:   { cpu: "300m", memory: "192Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ticketing
spec:
  selector: { app: redis }
  ports: [{ port: 6379, targetPort: 6379 }]
