k8s/07-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ticketing
spec:
  replicas: 2
  selector: { matchLabels: { app: frontend } }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      serviceAccountName: ticketing-sa
      automountServiceAccountToken: false
      containers:
        - name: frontend
          # ZAMIJENI <GHCR_USER> svojim GitHub korisnikom
          image: ghcr.io/<GHCR_USER>/ticketing-frontend:v1.0.0
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 3000 }]
          livenessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "96Mi" }
            limits:   { cpu: "300m", memory: "192Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ticketing
spec:
  selector: { app: frontend }
  ports: [{ port: 3000, targetPort: 3000 }]
