k8s/09-networkpolicy.yaml
# 1) Sve zatvori (default-deny ulazni promet u namespaceu)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ticketing
spec:
  podSelector: {}
  policyTypes: [ Ingress ]
---
# 2) Postgresu smiju pristupiti samo api i worker
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ingress
  namespace: ticketing
spec:
  podSelector: { matchLabels: { app: postgres } }
  policyTypes: [ Ingress ]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: api } }
        - podSelector: { matchLabels: { app: worker } }
      ports: [{ protocol: TCP, port: 5432 }]
---
# 3) Redisu smiju pristupiti samo api i worker
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache-ingress
  namespace: ticketing
spec:
  podSelector: { matchLabels: { app: redis } }
  policyTypes: [ Ingress ]
  ingress:
    - from:
        - podSelector: { matchLabels: { app: api } }
        - podSelector: { matchLabels: { app: worker } }
      ports: [{ protocol: TCP, port: 6379 }]
---
# 4) Frontend i API moraju biti dostupni izvana (Ingress controller)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-ingress
  namespace: ticketing
spec:
  podSelector: { matchExpressions: [{ key: app, operator: In, values: [ api, frontend ] }] }
  policyTypes: [ Ingress ]
  ingress:
    - {}   # dopusti ulazni promet (od Ingress controllera) na frontend/api
